# freebird-format-converter

./: Cargo.toml  build.rs  readme.md
src/: main.rs
src/app/: mod.rs  state.rs
src/app/ui/: chip.rs  main_window.rs  mod.rs
src/app/widgets/: mod.rs
src/channels/: messages.rs  mod.rs
src/core/: mod.rs
src/core/player/: mod.rs
src/core/processor/: ffmpeg.rs  mod.rs
src/core/task/: mod.rs
src/core/utils/: config.rs  dependent.rs  mod.rs  scanner.rs
src/logic/: dependent.rs  mod.rs
src/services/: ffmpeg_service.rs  mod.rs
