[package]
name = "freebird-format-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"   # egui 框架
egui = "0.27"
rfd = "0.14"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
zip = "0.6"
which = "5"
indicatif = "0.17"
image = "0.25"
egui_inbox = "0.11.0"

[build-dependencies]
winresource = "0.1"
