[package]
name = "freebird-format-converter"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
authors = ["hamfreebird <freebirdflyinthesky.@outlook.com>"]

[dependencies]
eframe = { version = "0.34",
           features = ["default", "__screenshot"] }
egui = "0.34"
rfd = "0.17"
regex = "1.10"
reqwest = { version = "0.13",
            features = ["blocking", "stream"] }
zip = "8.5"
which = "8.0"
indicatif = "0.18"
image = "0.25"
egui_inbox = "0.11.0"
egui_extras = "0.34"
env_logger = { version =  "0.11",
               features = ["auto-color", "humantime"] }

[build-dependencies]
winresource = "0.1"
